<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.usi.shd1_tools.scan_stress.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleLoopTimes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txtScanLoop"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="5000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="times"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtDecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleDecode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/lblEnableDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  " />

            <TextView
                android:id="@+id/txtInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleInterval"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtTriggerScanInterval"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.12"
                android:ems="10"
                android:inputType="number"
                android:text="5000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="    " />

            <TextView
                android:id="@+id/txtTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="@string/titleTimeout"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtScanTimeout"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.42"
                android:ems="10"
                android:inputType="number"
                android:text="2000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewMs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="ms"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/ckbTriggerScanToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chkEnableDisableEachScan"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleTransfer"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  " />

        <TextView
            android:id="@+id/titleIp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleIp" />

        <EditText
            android:id="@+id/txtDataTransfer_IP"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="192.168.10.103"
            android:textSize="14sp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  " />

        <TextView
            android:id="@+id/titlePort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlePort" />

        <EditText
            android:id="@+id/txtDataTransfer_Port"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="1000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        
        <TextView
            android:id="@+id/TextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  " />

        <TextView
            android:id="@+id/titleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleTime" />

        <EditText
            android:id="@+id/txtDataTransfer_SendInterval"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="10000"
            android:textSize="14sp" />
        
        <TextView
            android:id="@+id/textViewMs3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ms" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <CheckBox
            android:id="@+id/ckbDataTransfer_FixedDataSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkSize"
            android:textSize="14sp" />
        
        <EditText
            android:id="@+id/txtDataTransfer_DataLength"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="1024"
            android:textSize="14sp"
            android:enabled="false" />
        
        <TextView
            android:id="@+id/titleSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="bytes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnStart"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.59"
            android:text="@string/titleBtnStart" />

        <Button
            android:id="@+id/btnScanTest"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleResult"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="  " />

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Scan - " />

        <TextView
            android:id="@+id/titlePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlePass" />

        <TextView
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorResultPass" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    "
            android:textColor="@color/colorResultND" />

        <TextView
            android:id="@+id/titleFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleFail" />

        <TextView
            android:id="@+id/txtFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorResultFail" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    "
            android:textColor="@color/colorResultND" />

        <TextView
            android:id="@+id/titleND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleND" />

        <TextView
            android:id="@+id/txtND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorResultND" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:text="        "
            android:textColor="@color/colorResultND" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/TextView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="  " />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Transfer - "
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/titleResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pass / Fail / Total : " />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    " />

        <TextView
            android:id="@+id/sendResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 / 0 / 0"
            android:textColor="#FF6600" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="273dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="  " />

        <TextView
            android:id="@+id/TextView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="Progress - " />

        <TextView
            android:id="@+id/txtProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Executed / Total" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtViewActiveMs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.12"
            android:text="active:" />

        <EditText
            android:id="@+id/numActiveInterval"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.12"
            android:ems="10"
            android:inputType="number"
            android:text="20000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.12"
            android:text="suspend:" />

        <EditText
            android:id="@+id/numSuspendInterval"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.12"
            android:ems="10"
            android:inputType="number"
            android:text="20000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnS_RTest"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.07"
            android:text="S/R"
            android:visibility="visible" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtDecodeResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="true"
        android:imeOptions="actionNone"
        android:inputType="text"
        android:password="false"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        android:singleLine="false" />

</LinearLayout>