<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  Data Transfer Settings :"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/titleIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleIp" />

            <EditText
                android:id="@+id/txtDataTransfer_IP"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text|number"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/titlePort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titlePort" />

            <EditText
                android:id="@+id/txtDataTransfer_Port"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/titleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleTime" />

            <EditText
                android:id="@+id/txtDataTransfer_SendInterval"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewMs3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ms" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fix Length : " />

            <CheckBox
                android:id="@+id/ckbDataTransfer_FixedDataSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enable / Disable"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="		"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/txtDataTransfer_DataLength"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"
                android:text="1024"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/titleSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bytes" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="33dp"
        android:layout_marginRight="29dp" >

        <Button
            android:id="@+id/btnSetSuspendResumeOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="OK" />

        <Button
            android:id="@+id/btnSetSuspendResumeCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnSetSuspendResumeOK"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btnSetSuspendResumeOK"
            android:text="Cancel" />
    </RelativeLayout>

</RelativeLayout>